putting encryption into common

--- a/roles/consul-common/templates/common-config.hcl.j2
+++ b/roles/consul-common/templates/common-config.hcl.j2
@@ -1,2 +1,2 @@
 retry_join = ["{{ query('inventory_hostnames', 'consul_servers') | join('","')}}"]
-encrypt = "{{ consul_encryption_key }}"
+encrypt = "{{ consul_encryption_key.stdout }}"
