varibles for tls dir

--- a/roles/consul-common/templates/consul.service.j2
+++ b/roles/consul-common/templates/consul.service.j2
@@ -3,12 +3,12 @@ Description="HashiCorp Consul - A service mesh solution"
 Documentation=https://www.consul.io/
 Requires=network-online.target
 After=network-online.target
-ConditionFileNotEmpty=/etc/consul.d/common-config.hcl
+ConditionFileNotEmpty={{ consul_config_dir }}/common-config.hcl
 
 [Service]
 User=consul
 Group=consul
-ExecStart=/usr/local/bin/consul agent -config-dir=/etc/consul.d/
+ExecStart=/usr/local/bin/consul agent -config-dir={{ consul_config_dir }}
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGTERM
