--- a/roles/consul-server/templates/server-config.hcl.j2
+++ b/roles/consul-server/templates/server-config.hcl.j2
@@ -21,9 +21,9 @@ tls {
   defaults {
     verify_incoming = true
     verify_outgoing = true
-    ca_file = "{{ tls_dir }}/consul-agent-ca.pem"
-    cert_file = "{{ tls_dir }}/dc1-server-consul-0.pem"
-    key_file = "{{ tls_dir }}/dc1-server-consul-0-key.pem"
+    ca_file = "{{ consul_tls_dir }}/consul-agent-ca.pem"
+    cert_file = "{{ consul_tls_dir }}/dc1-server-consul-0.pem"
+    key_file = "{{ consul_tls_dir }}/dc1-server-consul-0-key.pem"
   }
 }
 connect {
