--- a/roles/consul-client/templates/client-config.hcl.j2
+++ b/roles/consul-client/templates/client-config.hcl.j2
@@ -8,6 +8,6 @@ connect {
 verify_incoming = true
 verify_outgoing = true
 verify_server_hostname = true
-ca_file = "/etc/consul.d/tls/consul-agent-ca.pem"
-cert_file = "/etc/consul.d/tls/dc1-client-consul-0.pem"
-key_file = "/etc/consul.d/tls/dc1-client-consul-0-key.pem"
+ca_file = "{{ consul_tls_dir }}/consul-agent-ca.pem"
+cert_file = "{{ consul_tls_dir }}/dc1-client-consul-0.pem"
+key_file = "{{ consul_tls_dir }}/dc1-client-consul-0-key.pem"
