--- a/roles/consul-common/templates/common-config.hcl.j2
+++ b/roles/consul-common/templates/common-config.hcl.j2
@@ -1,3 +1,3 @@
 retry_join = ["{{ query('inventory_hostnames', 'consul_servers') | join('","')}}"]
-encrypt = "{{ consul_encryption_key.stdout }}"
+encrypt = "bGlrZSwgc2hhcmUsIHN1YnNjcmliZSBhbmQgYmVsbAo="
 bind_addr = "{{ ansible_default_ipv4.address }}"
